<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroung"
    tools:context=".Activity.MenuActivity">

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/btn_back_menu"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/white"
            android:contentDescription="@string/app_name" />

        <TextView
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <LinearLayout
        android:layout_margin="@dimen/dp_16"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="2dp"
            android:tint="@color/colorPrimaryDark"
            android:layout_marginLeft="@dimen/dp_16"
            android:scaleType="fitXY"
            android:background="@color/transparent"
            android:src="@drawable/icon_tienich"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginStart="@dimen/dp_16"
            android:contentDescription="@string/app_name" />

        <TextView
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/dp_8"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:text="@string/tien_ich"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:weightSum="3"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/menu_tuvan"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <ImageView
                android:tint="@color/black"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/icon_question"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:contentDescription="@string/app_name" />
            <TextView
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/tu_van_sua_chua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_tintuc"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content">

            <ImageView
                android:tint="@color/black"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/icon_baiviet"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:contentDescription="@string/app_name" />
            <TextView
                android:textAlignment="center"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/tin_tuc_bai_viet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_website"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/icon_website"
                android:tint="@color/black"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_marginTop="@dimen/dp_4"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_margin="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginLeft="@dimen/dp_16"
            android:tint="@color/colorPrimaryDark"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:src="@drawable/icon_email"
            android:layout_marginStart="@dimen/dp_16"
            android:contentDescription="@string/app_name" />

        <TextView
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/dp_8"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:text="@string/lien_he"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_8" />

    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_margin="@dimen/dp_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/menu_phone"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/icon_contact"
                android:tint="@color/black"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_marginTop="@dimen/dp_4"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/ho_tro_truc_tiep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_diachi"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/icon_address"
                android:tint="@color/black"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_marginTop="@dimen/dp_4"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/dia_chi_chi_nhanh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_fanpage"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/icon_facebook"
                android:tint="@color/black"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_marginTop="@dimen/dp_4"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/fanpage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>




    <LinearLayout
        android:layout_margin="@dimen/dp_16"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginLeft="@dimen/dp_16"
            android:tint="@color/colorPrimaryDark"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:background="@color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/icon_setting"
            android:layout_marginStart="@dimen/dp_16"
            android:contentDescription="@string/app_name" />

        <TextView
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/dp_8"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:text="@string/cai_dat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_8" />

    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_margin="@dimen/dp_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/menu_dangxuat"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/icon_logout"
                android:tint="@color/black"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_marginTop="@dimen/dp_4"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/dang_xuat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_quanly"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/icon_manager"
                android:tint="@color/black"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_marginTop="@dimen/dp_4"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/quan_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>